--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,15 +6,18 @@ http {
     client_max_body_size 200M;
 
     server {
-        server_name urfugames.ru www.urfugames.ru;
+        server_name 158.160.20.41.com;
         listen 443 ssl;
 
-        ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
+        ssl_certificate /etc/ssl/158.160.20.41.crt;
+        ssl_certificate_key /etc/ssl/158.160.20.41.key;
+
+        # ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
+        # ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-        root /var/www/urfugames.ru;
+        root /var/www/158.160.20.41.com;
 
         location / {
             try_files $uri $uri/ /index.html;
@@ -22,25 +25,36 @@ http {
     }
 
     server {
-        if ($host = www.urfugames.ru) {
+        if ($host = www.158.160.20.41.com) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.urfugames.ru) {
+        if ($host = www.158.160.20.41.com) {
             return 301 https://$host$request_uri;
         }
 
-        server_name urfugames.ru www.urfugames.ru;
+        server_name 158.160.20.41.com;
         listen 80;
         return 404;
     }
 
     server {
-        server_name api.urfugames.ru;
+        server_name api.158.160.20.41.com;;
         listen 443 ssl;
 
-        ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
+        listen 80;
+        
+        ssl_certificate /etc/ssl/158.160.20.41.com.crt;
+        ssl_certificate_key /etc/ssl/158.160.20.41.com.key;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        keepalive_timeout 70;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_stapling on;
+        ssl_trusted_certificate /etc/ssl/ca.crt;
+        resolver 8.8.8.8;
+
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -54,25 +68,25 @@ http {
     }
 
     server {
-        if ($host = api.urfugames.ru) {
+        if ($host = api.158.160.20.41.com) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.api.urfugames.ru) {
+        if ($host = www.api.158.160.20.41.com) {
             return 301 https://$host$request_uri;
         }
 
-        server_name api.urfugames.ru www.api.urfugames.ru;
+        server_name api.158.160.20.41.com www.api.158.160.20.41.com;
         listen 80;
         return 404;
     }
 
     server {
-        server_name files.urfugames.ru;
+        server_name files.158.160.20.41.com;
         listen 443 ssl;
 
-        ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/158.160.20.41.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/158.160.20.41.com/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -81,7 +95,7 @@ http {
         add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
 
         location /files {
-            alias /var/www/files.urfugames.ru;
+            alias /var/www/files.158.160.20.41.com;
         }
 
         location / {
@@ -90,21 +104,21 @@ http {
     }
 
     server {
-        if ($host = files.urfugames.ru) {
+        if ($host = files.158.160.20.41.com) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.files.urfugames.ru) {
+        if ($host = www.files.158.160.20.41.com) {
             return 301 https://$host$request_uri;
         }
 
-        server_name files.urfugames.ru www.files.urfugames.ru;
+        server_name files.158.160.20.41.com www.files.158.160.20.41.com;
         listen 80;
         return 404;
     }
 
     server {
-        server_name *.urfugames.ru;
+        server_name *.158.160.20.41.com;
 
         location / {
             return 444;
