--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,18 +6,18 @@ http {
     client_max_body_size 200M;
 
     server {
-        server_name 89.223.124.186.com;
+        server_name trajector.ru;
         listen 443 ssl;
 
-        ssl_certificate /etc/ssl/89.223.124.186.crt;
-        ssl_certificate_key /etc/ssl/89.223.124.186.key;
+        ssl_certificate /etc/ssl/trajector.ru.crt;
+        ssl_certificate_key /etc/ssl/trajector.ru.key;
 
         # ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
         # ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-        root /var/www/89.223.124.186.com;
+        root /var/www/trajector.ru;
 
         location / {
             try_files $uri $uri/ /index.html;
@@ -25,27 +25,27 @@ http {
     }
 
     server {
-        if ($host = www.89.223.124.186.com) {
+        if ($host = www.trajector.ru) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.89.223.124.186.com) {
+        if ($host = www.trajector.ru) {
             return 301 https://$host$request_uri;
         }
 
-        server_name 89.223.124.186.com;
+        server_name trajector.ru;
         listen 80;
         return 404;
     }
 
     server {
-        server_name api.89.223.124.186.com;;
+        server_name api.trajector.ru;
         listen 443 ssl;
 
         listen 80;
         
-        ssl_certificate /etc/ssl/89.223.124.186.com.crt;
-        ssl_certificate_key /etc/ssl/89.223.124.186.com.key;
+        ssl_certificate /etc/ssl/trajector.ru.crt;
+        ssl_certificate_key /etc/ssl/trajector.ru.key;
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
         keepalive_timeout 70;
@@ -68,25 +68,25 @@ http {
     }
 
     server {
-        if ($host = api.89.223.124.186.com) {
+        if ($host = api.trajector.ru) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.api.89.223.124.186.com) {
+        if ($host = www.api.trajector.ru) {
             return 301 https://$host$request_uri;
         }
 
-        server_name api.89.223.124.186.com www.api.89.223.124.186.com;
+        server_name api.trajector.ru. www.api.trajector.ru;
         listen 80;
         return 404;
     }
 
     server {
-        server_name files.89.223.124.186.com;
+        server_name files.trajector.ru;
         listen 443 ssl;
 
-        ssl_certificate /etc/letsencrypt/live/89.223.124.186.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/89.223.124.186.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/trajector.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/trajector.ru/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -95,7 +95,7 @@ http {
         add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
 
         location /files {
-            alias /var/www/files.89.223.124.186.com;
+            alias /var/www/files.trajector.ru;
         }
 
         location / {
@@ -104,21 +104,21 @@ http {
     }
 
     server {
-        if ($host = files.89.223.124.186.com) {
+        if ($host = files.trajector.ru) {
             return 301 https://$host$request_uri;
         }
 
-        if ($host = www.files.89.223.124.186.com) {
+        if ($host = www.files.trajector.ru) {
             return 301 https://$host$request_uri;
         }
 
-        server_name files.89.223.124.186.com www.files.89.223.124.186.com;
+        server_name files.trajector.ru www.files.trajector.ru;
         listen 80;
         return 404;
     }
 
     server {
-        server_name *.89.223.124.186.com;
+        server_name *.trajector.ru;
 
         location / {
             return 444;
